# ChangeLog for www-client/google-chrome-unstable
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/google-chrome-unstable/ChangeLog,v 1.20 2014/04/05 02:41:20 floppym Exp $

*google-chrome-unstable-35.0.1916.17_p1 (05 Apr 2014)

  05 Apr 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-unstable-35.0.1916.17_p1.ebuild,
  -google-chrome-unstable-35.0.1916.6_p1.ebuild:
  Automated update.

*google-chrome-unstable-35.0.1916.6_p1 (02 Apr 2014)

  02 Apr 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-unstable-35.0.1916.6_p1.ebuild,
  -google-chrome-unstable-35.0.1912.2_p1.ebuild:
  Automated update.

*google-chrome-unstable-35.0.1912.2_p1 (27 Mar 2014)

  27 Mar 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-unstable-35.0.1912.2_p1.ebuild,
  -google-chrome-unstable-35.0.1908.4_p1.ebuild:
  Automated update.

*google-chrome-unstable-35.0.1908.4_p1 (26 Mar 2014)

  26 Mar 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-unstable-35.0.1908.4_p1.ebuild,
  -google-chrome-unstable-35.0.1897.2_p1.ebuild:
  Automated update.

*google-chrome-unstable-35.0.1897.2_p1 (18 Mar 2014)

  18 Mar 2014; Mike Gilbert <floppym@gentoo.org>
  +google-chrome-unstable-35.0.1897.2_p1.ebuild,
  -google-chrome-unstable-35.0.1883.0_p1.ebuild:
  Automated update.

  13 Mar 2014; Mike Gilbert <floppym@gentoo.org>
  google-chrome-unstable-35.0.1883.0_p1.ebuild:
  Fixup some paths. Create the libudev symlink in pkg_postinst.

*google-chrome-unstable-35.0.1883.0_p1 (11 Mar 2014)

  11 Mar 2014; Bernard Cafarelli <voyageur@gentoo.org>
  +google-chrome-unstable-35.0.1883.0_p1.ebuild,
  -google-chrome-unstable-35.0.1870.2_p1.ebuild:
  Automated update.

*google-chrome-unstable-35.0.1870.2_p1 (07 Mar 2014)

  07 Mar 2014; Bernard Cafarelli <voyageur@gentoo.org>
  +google-chrome-unstable-35.0.1870.2_p1.ebuild,
  -google-chrome-unstable-35.0.1862.2_p1.ebuild:
  Automated update.
