@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-unstable_35.0.1916.17-1_amd64.deb 46386994 SHA256 61752fe84ff4d37fc94bf872a206ae4542e637f246fc8e16a5828f2c8610aa3c SHA512 c334a037e2f3a4c1b565c58534cc821515b695e850a6ac472e08f185906898d163f1af04e99d9a42b09fa8953115e54a1ed05b1bea190d3adeb4ba962d6afdc6 WHIRLPOOL 5a2c1c6e49163c125f92d41c663165a3dd881a5f6651c68012e5251b486667a023cefa0f7cae194fce4ce0c04d8dab358bd6d00647380770ee64dd08cb85374c
-DIST google-chrome-unstable_35.0.1916.17-1_i386.deb 46659532 SHA256 061904206b597e339ff0d948b34bf886a9595ac34db437aadeb73a5bc11e15be SHA512 7e5ce97e71acb8aa786ff514e35e9cc4aa5151f8c68b6a11fa820ba8864782e9fe08c9eff6cb9641f9f9a6d23c79d0fa8edc66103029c6d245975ea1e48e2418 WHIRLPOOL eac2bfd2095d3d3213e4e2ae492ed07051c1d1f51c4b7c282186290edfb7d6de66c248048e33f29f60bebdf4a997fc109da6a4beaadcbae9cf69c581dbff8ff2
-EBUILD google-chrome-unstable-35.0.1916.17_p1.ebuild 4478 SHA256 e4ea7f1c44f60ec315b3aeb0d59b88ba6cb170d82373594930396c4606685912 SHA512 dd9aa2b4179b691dd6d790cbcb54fb0187f424e91d3a1d5debdbc725f5778dabb43ba26880da8a990fc45779a5dff494fffec12810170bc6d3e13adb11b75f11 WHIRLPOOL 6546f02953c674517870a88a849e83203c911761af8b1617d4988f52092533ba3841d8076ec0d29d415095e01b3ba5f2a9eec4f35adabf89d3d5b9b79141cbeb
-MISC ChangeLog 4485 SHA256 5e73deb0e202f754e198c327f82ee8875aca60f334b21b00b211f6a1694a5fc2 SHA512 dfcf4e95e92275bbbf939e179a30b516404665cc1d45db2a6d95f8448310faea5fbacf155fc78c5f0dacd09166ae5e14051c28ecbfd270c7adc62259d008f304 WHIRLPOOL 71293cd8d21275aaf8ce41c05e959e1393eae351a60b89a3a7a753b5805776670b164e0ec0647cf26d01ebc3375ceb9c6640c4722e99491ac0e89d41931ccbe1
+DIST google-chrome-unstable_35.0.1916.27-1_amd64.deb 46442882 SHA256 fd1e0b7d1959bf17d4c02790801a59ee44c8e7eef0c9765ebbeef2f850849fb3 SHA512 e6812ef763f12282c3a6014d18fce180adb1b89ea4b8f2c50b0c3b750458aa7cf200794c728f6ef97d24a1802580a601bd428f9e476609efc7715083ed9ccaac WHIRLPOOL 798576b3e77c4832750ec9b271f7fe0e2335d4479736727b853d3ea74c12e05d472a6b74acc57ab6e7229345d1f409a5895858a6e11a01f012a4d0b35b0fa283
+DIST google-chrome-unstable_35.0.1916.27-1_i386.deb 46653120 SHA256 8651f2bf9c5d2ccd7d4de6c4f9b393a86aa8667ed60eb2017e4a09d46c70a7e2 SHA512 f15e22b6cb81dabc95ef81ceb0a83bca743a7422c81a33341f8c68d317910048ddc89be58fd6efce38956f24d286f7f54eca17d93ffd59254e62cbbe9c7f73c3 WHIRLPOOL 8096cb0a36e1b9b8057db5e51c5b959ad8fda7f642586ad51f127e39fa88fc96297dc59784b41859d22ca89622265652471f0dc3e7cb5f5a705161fe13d6550e
+EBUILD google-chrome-unstable-35.0.1916.27_p1.ebuild 4478 SHA256 d490058ebc7dda4828689335371542b92278cd7447df9d0cd25a9f771e32a8e1 SHA512 723a2dd96816d1844d68d1e0f445663a8f918c91e3798af77c2a612a315ac58837e04e31a32fe986beab4efe9a6e0d51cf339af10847965f322f182816c7b5b8 WHIRLPOOL 044f95199df671345a0cfcec28a9094e9681c096f4ec38b7bedf1fd088f664618d4e20d7bcfebc9830c6f32d4b3b2c2b97d0bd7b5ebc2b522571fd147341464c
+MISC ChangeLog 4710 SHA256 05719befc9b605393a1507f159f1d7d10976a46792685dba102327b289167538 SHA512 7859214c9b29d5c51db169ef23487396f9ade5b5530517db3ea50ee6b0e8c117b1ef2e71bf0f7c031b409bf8bafbb32271db5f65533b0e0a7eeac2f9e5b0c7d6 WHIRLPOOL c97272b4d0d7a73f0d6481e8b245867c0f78cd3f44533092e47e92c5133038dc4cba787d2c9a31a6097802f2586f880b594cc170728f41a2511cd8cf12e306d8
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlM/bVQACgkQC77qH+pIQ6S+6wD/fmEFpPFEzWkmZN87935tv7p8
-OQ7D6NQWC2B0ZVvExuQA/AqQne1VWI3Ep0Jct5laPlTQu3cXjXpFadwrE3PTiMUV
-=FMwo
+iF4EAREIAAYFAlNFWBoACgkQC77qH+pIQ6ROIAEArGpaf0I7c8aGGk0SgUsnnj6m
+U0oV8tTV2CfxQoc0lBgA/i207X6IJCYFE6y6KUZbM6iyE86gaBR0ZiBz47l9zfW5
+=R6yv
 -----END PGP SIGNATURE-----
