@@ -1,25 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST google-chrome-stable_33.0.1750.152-1_amd64.deb 50568944 SHA256 f0c2d7076e3127c01975e14a8edcf8874b62371a2d1a49bb0ec632c47d9eeea0 SHA512 3c7c7b8ab92187f970ff2efa16d0e12ebb68b4450000e40ce444437bb83d88823bcfaf598f8e6797ae50395fbee4a3eb3450f066b09532c63b74c3cf18265c38 WHIRLPOOL 08435b13f5a851802b175a28ca8cb7048badb6202f389627ff964a8b129323702f82b066255488089a1969da98d1bbf55903a08b8a88525f5dcde466e2738634
-DIST google-chrome-stable_33.0.1750.152-1_i386.deb 48213786 SHA256 6088ba028dac810da1d64867f6ac6615542525c03de3ea4a7fc57008c76a901d SHA512 ad6b13b36912e72a24180ed2bac84dd5c0e16320813e8963112cb3e25720b06e7c2146fe936e5c73fa0aafa8c4d05ddfb4b98ef7419e77369ab83b1ad953e609 WHIRLPOOL 0e5127aaee1e7465599ba81b043dce34b917d39e6fff20ee2405f8a3daf220bd8866323fb723b3b6631bab6607417b031e6e0d863ff08f0e669c15978a5ff136
-EBUILD google-chrome-33.0.1750.152_p1.ebuild 4511 SHA256 4755f2551e6bdf15bf977bdbcf8673d4f554b0b707319786cefbf4f139252b9f SHA512 4f8e299530e614ab3335418d761651560f475d65a7a31b23fe986594d3ceefc011d0a8e07935f37771ff5769bac4be17fd5ee9c7f848311dd1a1737d8f6c663d WHIRLPOOL 5606949547c311f69153e74c1e2241d03d9cd0c3096c235ea03f1fbf6fff2672f5304bb732a2f48c2c3c0ee83b0e74b1b60e1ae44a41035b325ce0c1e79f60b4
-MISC ChangeLog 90371 SHA256 e12abc96b77a262a0d7955e58b8a39600f6ec3ee9872db6890cb422824c3037f SHA512 447d5b9c34421a2f428701f4a7854223d64db64db62bd508ebe62cb1f4c83be25162bfcd389d1ad7d5e66f6a091c68d3f9f3d5a3f6f229f6debd89ffefddb501 WHIRLPOOL 2a8bbcfb2aacbfc07e797dca1ab47df16bc288ca81be51965c7e5e3950a20e42b45bae70cbca5e3fe50c14862451812be73eb6ce5421da1666cbb516838a0289
+DIST google-chrome-stable_34.0.1847.116-1_amd64.deb 48218554 SHA256 44b573e442770b83df18ebfc459fe5ce7a7f7f17039916b22b89d148b66af199 SHA512 4f3c1c55851a5f5e35d1027f7bc9d2033c069bc683b3c8ebe4f3b3bc1c18c76f4b802c2a29a69eda1d66fc9141e049c3915fb2bd93071ce26ef2ab5cbcfdee8b WHIRLPOOL a174afe9ffe547af4b3c885c777118642f5c2fade9fff9315bc8ea05f3b2f082c26de8e375bed3c50ad2137c5f6deb561f202b7ea8032a00a7abaa464d420387
+DIST google-chrome-stable_34.0.1847.116-1_i386.deb 48512316 SHA256 2e5368c2834d833c374df30eba0f37ffc2265d4c145baf35ba21b1d7019244cc SHA512 afea9aa6c380d0a8d6676157f70387ac5b314a9585aa0ab55c182a2f4f21a96bb25d61c52d8edcb8e508734d9809459bf836d623a13813f4ab6de8d8614d5083 WHIRLPOOL 99f8c26e3e0a52eaa6b96fc3ba4f7a4a5a707cc7f79235166201386c621fd83e84612200ab6b2a758cce8d04167fbe0ea2cb7d8b9bf365b82a4f1d9a0b22dbf1
+EBUILD google-chrome-34.0.1847.116_p1.ebuild 4512 SHA256 72a119fd2e64afe22acf5bcf1759ac43505cd6aa3f8f908393acdaa9fbc5d350 SHA512 49ba6a91637c4b30c27acd99fb94c80f257fc820c366e39c9054b23e62aaab0611866219981bda6c7dac97bc3d0431fc07e3b372475656e82168ca440dfe7917 WHIRLPOOL 4b7dcc6a9725e0491f8003513b67434ea522bec914e524f2a9ffd8f5fb9f86995667f23a909de79ab40871b976818baefe11b05b243bc8849bd4de1a0b01268a
+MISC ChangeLog 90573 SHA256 b3be8d7d39aa0e3f09062f08c6b6e0af73d60d84cb48af12aa918e9b2563cfe8 SHA512 700440c9ac4dd2f6cd780d2420a709f381a1cd8f59f8072a917f39328d63c18947f3137ef2e11a3a60afbec3be021a23e7fc78eb2d1499e73441aea1d5140679 WHIRLPOOL 265f19a3ffa6a307a1c64fd73e8b1fef9076dd24e23acf0f8ed8d71e073598d4a3a4fdc90889ded7b7716011f633f8ddcd418e5c91866833caefc7b581fd2c30
 MISC metadata.xml 600 SHA256 e3dffcb8db012d64e4dbb7df2566b800b2a9476aaf0447b1d40a6e94d2733806 SHA512 350bb629bee41ac320d1a870d3d7f34ead23edb1b7cf6ac6379363b01435015c58e249ba1375e9ed3b3023107ef5f3f29f646143a9e2622769923aa5fb21d846 WHIRLPOOL 05772be4e662813e5a0231e46d272931f0ccce9a13f7244ddda8a40e43e8d141293d0a70d4aa8b640ace773d3f68d663bd8cd4558f3bc3c65e5126834bf05129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTJGxDAAoJEPGu1DbS6WIAz/MP/i6tPyELjpnHbkBnVMFsIUDC
-SROp7Nfts9pagJQmunBDGzMus7i+K0RyXbYNjT4elqxyvxil3fPgCBNVSav46by8
-krKGUIswF8T36dPg/K9kNStvtovy1cdOvxZof8wg86JT+EjgWL4EPBiGfjqbupE5
-YJNyAh4AQxYuPUFMUmGk5bQGmfeAzliSqRC6/8madagha3YTJpXBxoFPfXzaHrI2
-BAFDl5AVy9RFHZn/Z8OeileY+20Pxucr9Em2hdIw16WrL93f+MkoONIm8MZz0WXP
-7gipncVimmGPCP57scAK6OLESXCg9P8XbEghpVTz4VMCwdyWuORP9WLn0ul+oi6a
-rDD06wNNmdMF2CejJMMhKvxevb1VUweiI2gl24HwN0m2n58ko8potkWPtKDQG1nI
-2tC058i8U7xaD7zLBnNmpsFoiaBcJ3enWZrgMDlwgS++17RaPJ5wxwKXXe7D5ysI
-6MdpB2uqHTWHkWGEmVD+1z/5NS/2h/olC+hx2fuEroO/uEBY82YVSeNHAlpl0D6p
-U8OK9tLcaKR9GRXG8KNYWdA1TW3LZWS55ZJLPCA4AAc6MUfUUUInLmHRg6yN5a96
-SWooSOIleM7ujAEEqcB0ybD1lUcn/Lvwv/Rjyf5PqBBAig/fE7rp0IkG1h5yV9Cu
-xiQXz+mQqgD0mGLFnEv4
-=SBia
+iF4EAREIAAYFAlNFV9QACgkQC77qH+pIQ6RUygEAvSAU+e6S9qNrutfs5VUhQmaU
+3U65Cwb7E3bFyJ46u5IA/AnZEKejhWIdLZLQY4hyzGDaQbYogKB35sYR+akvXa8E
+=bWSX
 -----END PGP SIGNATURE-----
